# docs/swagger.json
@@ -3,14 +3,9 @@
     "info": {
         "description": "Documentação da API IPTV",
         "title": "API IPTV",
-        "termsOfService": "http://example.com/terms/",
         "contact": {
             "name": "Suporte",
             "email": "suporte@example.com"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
         },
         "version": "1.0"
     },
@@ -56,6 +51,73 @@
                     },
                     "500": {
                         "description": "Erro interno ao buscar clientes",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/clients-table": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retorna uma lista de clientes paginada e filtrada para uso em DataTables, associados ao member_id do token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ClientsTable"
+                ],
+                "summary": "Retorna clientes paginados e filtrados",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Número da página (padrão: 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limite de registros por página (padrão: 10)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Termo de pesquisa para filtrar por username ou reseller_notes",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Retorna a lista de clientes paginada e informações de paginação",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Token inválido ou não fornecido",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno ao buscar ou processar os dados",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
