# routes/routes.go
@@ -23,6 +23,7 @@ func SetupRoutes(r *gin.Engine) {
 	protected.Use(controllers.AuthMiddleware()) // ✅ Certifique-se que esta função existe
 	{
 		protected.GET("/clients", controllers.GetClients)
+		protected.GET("/clients-table", controllers.GetClientsTable)
 		protected.POST("/create-test", controllers.CreateTest)
 		protected.GET("/details-error/:id_usuario", controllers.GetUserErrors)
 		protected.GET("/dashboard", controllers.DashboardHandler)
